# CodeAuditor

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  LICENSE  README  README.md  README.zh.md  design.md  pyproject.toml
code_auditor/: __main__.py  agent.py  checkpoint.py  config.py  discovered.py  logger.py  orchestrator.py  prompts.py  reproduction_status.py  tui.py  utils.py  wiki.py
code_auditor/parsing/: stage1.py  stage2.py  stage3.py  stage4.py
code_auditor/report/: generate.py
code_auditor/stages/: stage0.py  stage1.py  stage2.py  stage2_deployments.py  stage3.py  stage4.py  stage5.py  stage6.py
code_auditor/tests/: test_backend_selection.py  test_discovered.py  test_parsers_and_report.py  test_stage6_discovered.py  test_wiki_context.py
code_auditor/validation/: common.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py
plan/deep-analysis-integration/: deep-analysis-integration.md
plan/merge-module-sep-au-sep/: plan.md  stage2.md
plan/observation-memory/: observation-memory.md
plan/research-first-reorder/: promt.md  research-first-reorder.md
prompts/: stage1.md  stage2-build.md  stage2.md  stage3.md  stage4.md  stage5.md  stage6.md
protocol_auditor/: __main__.py  agent_utils.py  checkpoint.py  config.py  logger.py  main.py  orchestrator.py  reference  utils.py
protocol_auditor/parsing/: stage1_parser.py  stage2_parser.py
protocol_auditor/prompts/: stage1.md  stage2.md  stage3.md  stage4.md
protocol_auditor/report/: generate.py  (+1 more)
skills/: deep-analysis-network-protocol.md
src/: checkpoint.ts  main.ts  orchestrator.ts  runtime.ts
(+36 files in other folders)
